--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.agrishare">
 
     <application
@@ -8,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgriShare">
+        android:theme="@style/Theme.AgriShare.NoActionBar">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -21,5 +23,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
