--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.room:room-common:2.4.0'
+    implementation 'androidx.room:room-runtime:2.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
 
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
