room fix+ intro login + ui change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:exported="false" />
         <activity
             android:name=".IntroActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AgriShare.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
