--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriShare.NoActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name=".feed.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AgriShare.NoActionBar">
